Initial (incomplete) port to 1.21